--- a/src/index.html
+++ b/src/index.html
@@ -16,55 +16,67 @@
                     <div class="logo-text">Memorisely</div>
                 </div>
             </a>
-            <div id="outline" class="outline">Close</div>
+            <div id="outline" class="outline">Menu</div>
         </div>
         <div id="slider-body" class="slider-body">
             <div class="footer-column">
                 <div class="footer-header">LIVE BOOTCAMPS</div>
                 <a href="#"><div class="footer-column-item">UI/UX design bootcamp</div></a>
                 <a href="#"><div class="footer-column-item">UI design bootcamp</div></a>
+                <a href="#"><div class="footer-column-item">Design system bootcamp</div></a>
+                <a href="#"><div class="footer-column-item">Accessible design bootcamp</div></a>
             </div>
         </div>
     </div>
     <div class="body-wrapper">
         <div class="container">
-            <div class="section">
+            <div class="section center-align">
                 <div class="layout-grid hero-columns">
                     <div>
                         <h1>The only Coding BootCamp you will ever need</h1>
                         <p>Kodex is an online immersive coding bootcamp. Join with coder around the world and learn the skills of a web developer during live class</p>
-                        <a href="#" class="fill"><div>View Bootcamps</div></a>
+                        <a href="#" class="fill hero-button"><div>View Bootcamps</div></a>
+                    </div>
+                    <div class="hero-wrapper">
+                        <div class="layout-grid hero-faces">
+                            <div class="hero-face-container">
+                                <img src="https://global-uploads.webflow.com/5f8e97a7f04a9fe98d9401a6/5f8e97a7f04a9f3614940369_james_hero.png"  alt="" class="memorisers-face eli">
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
         <div class="container">
             <div class="section">
-                <div class="layout-grid hero-columns">
-                    <div class="title">LIVE CODING BOOTCAMP</div>
-                    <div>
+                <div class="layout-grid">
+                    <div class="row">
+                        <div class="title">LIVE CODING BOOTCAMP</div>
                         <h4>Proudly educating the best developer for the top company</h4>
                         <p>We're super proud to educate the UX/UI community and place students in the best companies on the planet. </p>
                     </div>
                 </div>
-                <div class="layout-grid three-columns">
-                    <img src="https://global-uploads.webflow.com/5f8e97a7f04a9fe98d9401a6/612de90c03705b1fb8be2216_Frame%2078.png" alt="">
-                    <img src="https://global-uploads.webflow.com/5f8e97a7f04a9fe98d9401a6/612de90c03705b1fb8be2216_Frame%2078.png" alt="">
-                    <img src="https://global-uploads.webflow.com/5f8e97a7f04a9fe98d9401a6/612de90c03705b1fb8be2216_Frame%2078.png" alt="">
+                <div class="layout-grid three-columns company-logo">
+                    <img class="logo-image"src="https://global-uploads.webflow.com/5f8e97a7f04a9fe98d9401a6/612de90c03705b1fb8be2216_Frame%2078.png" alt="" >
+                    <img class="logo-image"src="https://global-uploads.webflow.com/5f8e97a7f04a9fe98d9401a6/612de90c03705b1fb8be2216_Frame%2078.png" alt="" >
+                    <img class="logo-image"src="https://global-uploads.webflow.com/5f8e97a7f04a9fe98d9401a6/612de90c03705b1fb8be2216_Frame%2078.png" alt="" >
+                    <img class="logo-image"src="https://global-uploads.webflow.com/5f8e97a7f04a9fe98d9401a6/612de90c03705b1fb8be2216_Frame%2078.png" alt="" >
+                    <img class="logo-image"src="https://global-uploads.webflow.com/5f8e97a7f04a9fe98d9401a6/612de90c03705b1fb8be2216_Frame%2078.png" alt="" >
+                    <img class="logo-image" src="https://global-uploads.webflow.com/5f8e97a7f04a9fe98d9401a6/612de90c03705b1fb8be2216_Frame%2078.png" alt="">
                 </div>
             </div>
         </div>
         <div class="container">
             <div class="section">
-                <div class="layout-grid hero-columns">
+                <div class="layout-grid">
                     <div class="title">LIVE CODING BOOTCAMP</div>
-                    <div>
+                    <div class="row">
                         <h4>Change your life, become a web developer</h4>
                         <p>Our online UX/UI bootcamps are designed to help you learn-by-doing with a micro class of 15 designers around the world. </p>
                     </div>
                 </div>
-                <div class="layout-grid three-column-nav four-columns top-marge">
-                    <a href="#" class="nav-card w-inline-block">
+                <div class="layout-grid three-columns">
+                    <a href="#" class="nav-card">
                         <img class="bootcamp-card-image" src="https://assets.website-files.com/5f3ea097c4e639aa49e8f5b8/5f3ea097c4e6395065e8f61b_prof%20and%20student.png">
                         <div class="card-body">
                             <div class="inline">
@@ -78,14 +90,44 @@
                             <div class="small-text">Change your life, become a UX/UI Designer in 10 weeks</div>
                             <div class="small-break"></div>
                             <div class="fill">View Bootcamp</div></div>
-                        </a>
-            </div>
+                    </a>
+                    <a href="#" class="nav-card">
+                        <img class="bootcamp-card-image" src="https://assets.website-files.com/5f3ea097c4e639aa49e8f5b8/5f3ea097c4e6395065e8f61b_prof%20and%20student.png">
+                        <div class="card-body">
+                            <div class="inline">
+                                <img src="https://global-uploads.webflow.com/5f8e97a7f04a9fe98d9401a6/5f9bd5f9acf2ce621f065eaf_RED_STAR.svg" loading="lazy" alt="" class="stars">
+                                <div class="small-text">5/5 · 100% completion rate</div>
+                            </div>
+                            <div class="tiny-break"></div>
+                            <h6>UX/UI Design</h6>
+                            <div class="small-text black">Part-Time · 10 weeks</div>
+                            <div class="full-line"></div>
+                            <div class="small-text">Change your life, become a UX/UI Designer in 10 weeks</div>
+                            <div class="small-break"></div>
+                            <div class="fill">View Bootcamp</div></div>
+                    </a>
+                    <a href="#" class="nav-card">
+                        <img class="bootcamp-card-image" src="https://assets.website-files.com/5f3ea097c4e639aa49e8f5b8/5f3ea097c4e6395065e8f61b_prof%20and%20student.png">
+                        <div class="card-body">
+                            <div class="inline">
+                                <img src="https://global-uploads.webflow.com/5f8e97a7f04a9fe98d9401a6/5f9bd5f9acf2ce621f065eaf_RED_STAR.svg" loading="lazy" alt="" class="stars">
+                                <div class="small-text">5/5 · 100% completion rate</div>
+                            </div>
+                            <div class="tiny-break"></div>
+                            <h6>UX/UI Design</h6>
+                            <div class="small-text black">Part-Time · 10 weeks</div>
+                            <div class="full-line"></div>
+                            <div class="small-text">Change your life, become a UX/UI Designer in 10 weeks</div>
+                            <div class="small-break"></div>
+                            <div class="fill">View Bootcamp</div></div>
+                    </a>
+                </div>
         </div>
         <div class="container">
             <div class="section">
-                <div class="layout-grid hero-columns">
-                    <div class="title">LIVE CODING BOOTCAMP</div>
-                    <div>
+                <div class="layout-grid">
+                    <div class="row">
+                        <div class="title">LIVE CODING BOOTCAMP</div>
                         <h4>Learn-by-doing with a micro class of designers</h4>
                         <p>Memorisely is an affordable, accessible way to learn UX/UI online with designers around the world. We connect you with 15 designers around the world and teach you live wherever you are with the latest real-time design tools.</p>
                     </div>
@@ -95,12 +137,22 @@
         </div>
         <div class="container">
             <div class="section">
-                <div class="layout-grid hero-columns">
-                    <div class="title">LIVE CODING BOOTCAMP</div>
-                    <div>
+                <div class="layout-grid">
+                    <div class="row">
+                        <div class="title">LIVE CODING BOOTCAMP</div>
                         <h4>Why learn live with Memorisely?</h4>
                     </div>
-                    <div class="layout-grid">
+                    <div class="layout-grid three-columns">
+                        <div class="block">
+                            <h4 class="no-margin">100%</h4>
+                            <div class="capitals">Completion rate</div>
+                            <p class="large-text">For context, typical online courses have a 12.6% completion rate. We are proud to have 100% completion rate</p>
+                        </div>
+                        <div class="block">
+                            <h4 class="no-margin">100%</h4>
+                            <div class="capitals">Completion rate</div>
+                            <p class="large-text">For context, typical online courses have a 12.6% completion rate. We are proud to have 100% completion rate</p>
+                        </div>
                         <div class="block">
                             <h4 class="no-margin">100%</h4>
                             <div class="capitals">Completion rate</div>
@@ -112,14 +164,39 @@
         </div>
         <div class="container">
             <div class="section">
-                <div class="layout-grid hero-columns">
-                    <div>
+                <div class="layout-grid">
+                    <div class="row">
+                        <div class="title">LIVE CODING BOOTCAMP</div>
                         <h4>Meet our bootcamp alumni</h4>
                         <p>We're proud to upskill UX/UI designers online from around the world in the latest workflows, and tools. Learn how designers from around the world enjoyed learning online with Memorisely.</p>
                     </div>
                 </div>
-                <div>
-                    <div>
+                <div class="layout-grid three-columns">
+                    <div class="row">
+                        <div class="avatar-container">
+                            <img src="https://global-uploads.webflow.com/5f8e97a7f04a9fe98d9401a6/5f8e97a7f04a9f6cb69402f9_connor_headshot%20(1).jpg" alt="" class="avatar">
+                            <div>
+                                <div>Connor</div>
+                                <div>Product designer</div>
+                            </div>
+                        </div>
+                        <div>
+                            <p>"Do it! You're working with the most up to date processes, tools, and best practices whilst collaborating with other designers all done in a positive vibe. Your confidence as a designer will grow."</p>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="avatar-container">
+                            <img src="https://global-uploads.webflow.com/5f8e97a7f04a9fe98d9401a6/5f8e97a7f04a9f6cb69402f9_connor_headshot%20(1).jpg" alt="" class="avatar">
+                            <div>
+                                <div>Connor</div>
+                                <div>Product designer</div>
+                            </div>
+                        </div>
+                        <div>
+                            <p>"Do it! You're working with the most up to date processes, tools, and best practices whilst collaborating with other designers all done in a positive vibe. Your confidence as a designer will grow."</p>
+                        </div>
+                    </div>
+                    <div class="row">
                         <div class="avatar-container">
                             <img src="https://global-uploads.webflow.com/5f8e97a7f04a9fe98d9401a6/5f8e97a7f04a9f6cb69402f9_connor_headshot%20(1).jpg" alt="" class="avatar">
                             <div>
@@ -136,8 +213,8 @@
         </div>
         <div class="container">
             <div class="section">
-                <div class="layout-grid hero-columns promo-image">
-                    <div>
+                <div class="layout-grid promo-image">
+                    <div class="row promo-section">
                         <h1>Ready to become a web developer</h1>
                         <p>As you'll have gathered, we're open and honest and would love to have you join our next Bootcamp!</p>
                         <a href="#" class="fill"><div>View Bootcamps</div></a>
@@ -151,6 +228,8 @@
             <div class="footer-header">LIVE BOOTCAMPS</div>
             <a href="#"><div class="footer-column-item">UI/UX design bootcamp</div></a>
             <a href="#"><div class="footer-column-item">UI design bootcamp</div></a>
+            <a href="#"><div class="footer-column-item">Design system bootcamp</div></a>
+            <a href="#"><div class="footer-column-item">Accessible design bootcamp</div></a>
     </div>
     <script src="./app.js"></script>
 </body>
